// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Diagram Equations From Object Equation Creation Equation with all options 1`] = `
Array [
  0.85,
  0,
  1.7875,
  0,
  0.85,
  1.91925,
  0,
  0,
  1,
]
`;

exports[`Diagram Equations From Object Equation Creation Equation with all options 2`] = `
Array [
  0.85,
  0,
  1.7875,
  0,
  0.85,
  1.69845,
  0,
  0,
  1,
]
`;

exports[`Diagram Equations From Object Equation Creation Equation with all options 3`] = `
Array [
  0.85,
  0,
  1.915,
  0,
  0.85,
  1.80045,
  0,
  0,
  1,
]
`;

exports[`Diagram Equations From Object Equation Creation Equation with all options 4`] = `
Array [
  0.17,
  0,
  1.745,
  0,
  0.01,
  1.85995,
  0,
  0,
  1,
]
`;

exports[`Diagram Equations From Object Equation Creation Navigator with all options 1`] = `
Array [
  0.7,
  0,
  0.035,
  0,
  0.7,
  0.0996,
  0,
  0,
  1,
]
`;

exports[`Diagram Equations From Object Equation Creation Navigator with all options 2`] = `
Array [
  0.7,
  0,
  0.035,
  0,
  0.7,
  -0.084,
  0,
  0,
  1,
]
`;

exports[`Diagram Equations From Object Equation Creation Navigator with all options 3`] = `
Array [
  0.7,
  0,
  0.14,
  0,
  0.7,
  0,
  0,
  0,
  1,
]
`;

exports[`Diagram Equations From Object Equation Creation Navigator with all options 4`] = `
Array [
  0.14,
  0,
  0,
  0,
  0.01,
  0.049,
  0,
  0,
  1,
]
`;

exports[`Diagram Equations From Object Equation Creation Navigator without equation Split 1`] = `
Array [
  0.7,
  0,
  0.035,
  0,
  0.7,
  0.0996,
  0,
  0,
  1,
]
`;

exports[`Diagram Equations From Object Equation Creation Navigator without equation Split 2`] = `
Array [
  0.7,
  0,
  0.035,
  0,
  0.7,
  -0.084,
  0,
  0,
  1,
]
`;

exports[`Diagram Equations From Object Equation Creation Navigator without equation Split 3`] = `
Array [
  0.7,
  0,
  0.14,
  0,
  0.7,
  0,
  0,
  0,
  1,
]
`;

exports[`Diagram Equations From Object Equation Creation Navigator without equation Split 4`] = `
Array [
  0.14,
  0,
  0,
  0,
  0.01,
  0.049,
  0,
  0,
  1,
]
`;

exports[`Diagram Equations From Object Equation Creation Navigator without equation all in one object 1`] = `
Array [
  0.7,
  0,
  0.035,
  0,
  0.7,
  0.0996,
  0,
  0,
  1,
]
`;

exports[`Diagram Equations From Object Equation Creation Navigator without equation all in one object 2`] = `
Array [
  0.7,
  0,
  0.035,
  0,
  0.7,
  -0.084,
  0,
  0,
  1,
]
`;

exports[`Diagram Equations From Object Equation Creation Navigator without equation all in one object 3`] = `
Array [
  0.7,
  0,
  0.14,
  0,
  0.7,
  0,
  0,
  0,
  1,
]
`;

exports[`Diagram Equations From Object Equation Creation Navigator without equation all in one object 4`] = `
Array [
  0.14,
  0,
  0,
  0,
  0.01,
  0.049,
  0,
  0,
  1,
]
`;

exports[`Diagram Equations From Object Equation Creation Simple 1`] = `
Array [
  0.7,
  0,
  0.035,
  0,
  0.7,
  0.0996,
  0,
  0,
  1,
]
`;

exports[`Diagram Equations From Object Equation Creation Simple 2`] = `
Array [
  0.7,
  0,
  0.035,
  0,
  0.7,
  -0.084,
  0,
  0,
  1,
]
`;

exports[`Diagram Equations From Object Equation Creation Simple 3`] = `
Array [
  0.7,
  0,
  0.14,
  0,
  0.7,
  0,
  0,
  0,
  1,
]
`;

exports[`Diagram Equations From Object Equation Creation Simple 4`] = `
Array [
  0.14,
  0,
  0,
  0,
  0.01,
  0.049,
  0,
  0,
  1,
]
`;
